tests/snapshots/navigation_submenu_tests__simulation_submenu_display.snap
---
source: tests/navigation_submenu_tests.rs
expression: output.stdout
---
no-ledger ⮞
=== Main menu - No Ledger ===

  Ledger       Ledger operations (new, load, save, backup, restore...)
  Account      Manage accounts via wizard flows
  Category     Manage categories and budgets
  Transaction  Manage transactions via wizard flows
> Simulation   Manage simulations and what-if scenarios
  List         List accounts, categories, transactions, simulations...
  Summary      Show ledger summary
  Forecast     Forecast upcoming activity
  Config       Global CLI preferences
  Help         Show available commands
  Version      Show build metadata
  Exit         Exit the shell

(Use arrow keys to navigate, Enter to select, ESC to exit)
no-ledger ⮞
=== simulation menu ===

> New      Create a simulation
  Enter    Enter a simulation
  Leave    Leave active simulation
  Apply    Apply simulation changes
  Discard  Discard a simulation
  List     List simulations
  Show     Show simulation details

(Use arrow keys to navigate, Enter to select, ESC to go back)
no-ledger ⮞
=== Main menu - No Ledger ===

> Ledger       Ledger operations (new, load, save, backup, restore...)
  Account      Manage accounts via wizard flows
  Category     Manage categories and budgets
  Transaction  Manage transactions via wizard flows
  Simulation   Manage simulations and what-if scenarios
  List         List accounts, categories, transactions, simulations...
  Summary      Show ledger summary
  Forecast     Forecast upcoming activity
  Config       Global CLI preferences
  Help         Show available commands
  Version      Show build metadata
  Exit         Exit the shell

(Use arrow keys to navigate, Enter to select, ESC to exit)
Exiting shell.
